Navbar aligned with SDC Buggy Logo

--- a/src/style/header/header.css
+++ b/src/style/header/header.css
@@ -1,3 +1,7 @@
+header {
+    display : flex;
+}
+
 #header-sdc-logo-blkswht {
     width : 100px;
     height : auto;
