--- a/src/style/header/navbar.css
+++ b/src/style/header/navbar.css
@@ -1,3 +1,7 @@
+#navbar {
+    text-align: right;
+}
+
 #navbar li {
     display: inline;
 }
